// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failing specific impact levels 1`] = `
"$ axe-storybook --failing-impact critical
[chromium] accessibility
  delays
    ✓ Short Delay And Pass
    1) Short Delay And Fail
    ✓ Medium Delay And Pass
    2) Medium Delay And Fail
    3) Long Delay And Timeout
  simple
    ✓ No Failures
    4) Failure No Discernible Text
    ✓ Failure Color Contrast
    5) Failure No Discernible Text And Invalid Role
    - Failure Color Contrast Skipped
    - Failure No Discernible Text And Invalid Role Skipped
    ✓ Failure Color Contrast Disabled Rule
    6) Failure No Discernible Text And Invalid Role Disabled One Rule
    ✓ Failure No Discernible Text And Invalid Role Disabled Rules

6 passing
6 failing
2 pending

1) [chromium] accessibility
     delays
       Short Delay And Fail

       Detected the following accessibility violations!

       1. aria-roles (ARIA roles used must conform to valid values)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/aria-roles?application=axeAPI.

          Check these nodes:

          - html: <button id=\\"hi\\" role=\\"wut-the-wut\\">hello world</button>
            summary: Fix all of the following:
                       Role must be one of the valid ARIA roles: wut-the-wut

2) [chromium] accessibility
     delays
       Medium Delay And Fail

       Detected the following accessibility violations!

       1. aria-roles (ARIA roles used must conform to valid values)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/aria-roles?application=axeAPI.

          Check these nodes:

          - html: <button id=\\"hi\\" role=\\"wut-the-wut\\">hello world</button>
            summary: Fix all of the following:
                       Role must be one of the valid ARIA roles: wut-the-wut

3) [chromium] accessibility
     delays
       Long Delay And Timeout

       TimeoutError: Promise timed out after 2000 milliseconds

4) [chromium] accessibility
     simple
       Failure No Discernible Text

       Detected the following accessibility violations!

       1. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

5) [chromium] accessibility
     simple
       Failure No Discernible Text And Invalid Role

       Detected the following accessibility violations!

       1. aria-roles (ARIA roles used must conform to valid values)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/aria-roles?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix all of the following:
                       Role must be one of the valid ARIA roles: wut-the-wut

       2. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

6) [chromium] accessibility
     simple
       Failure No Discernible Text And Invalid Role Disabled One Rule

       Detected the following accessibility violations!

       1. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
"
`;

exports[`failing specific impact levels 2`] = `
"error Command failed with exit code 1.
"
`;

exports[`filtering the components to run 1`] = `
"$ axe-storybook --pattern simple
[chromium] accessibility
  [skipped] delays
    - Short Delay And Pass
    - Short Delay And Fail
    - Medium Delay And Pass
    - Medium Delay And Fail
    - Long Delay And Timeout
  simple
    ✓ No Failures
    1) Failure No Discernible Text
    2) Failure Color Contrast
    3) Failure No Discernible Text And Invalid Role
    - Failure Color Contrast Skipped
    - Failure No Discernible Text And Invalid Role Skipped
    ✓ Failure Color Contrast Disabled Rule
    4) Failure No Discernible Text And Invalid Role Disabled One Rule
    ✓ Failure No Discernible Text And Invalid Role Disabled Rules

3 passing
4 failing
7 pending

1) [chromium] accessibility
     simple
       Failure No Discernible Text

       Detected the following accessibility violations!

       1. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

2) [chromium] accessibility
     simple
       Failure Color Contrast

       Detected the following accessibility violations!

       1. color-contrast (Elements must have sufficient color contrast)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/color-contrast?application=axeAPI.

          Check these nodes:

          - html: <button style=\\"background-color: red; color: hotpink;\\">hello world</button>
            summary: Fix any of the following:
                       Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1

3) [chromium] accessibility
     simple
       Failure No Discernible Text And Invalid Role

       Detected the following accessibility violations!

       1. aria-roles (ARIA roles used must conform to valid values)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/aria-roles?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix all of the following:
                       Role must be one of the valid ARIA roles: wut-the-wut

       2. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

4) [chromium] accessibility
     simple
       Failure No Discernible Text And Invalid Role Disabled One Rule

       Detected the following accessibility violations!

       1. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
"
`;

exports[`filtering the components to run 2`] = `
"error Command failed with exit code 1.
"
`;

exports[`outputting accessibility violation information for the demo app 1`] = `
"$ axe-storybook
[chromium] accessibility
  delays
    ✓ Short Delay And Pass
    1) Short Delay And Fail
    ✓ Medium Delay And Pass
    2) Medium Delay And Fail
    3) Long Delay And Timeout
  simple
    ✓ No Failures
    4) Failure No Discernible Text
    5) Failure Color Contrast
    6) Failure No Discernible Text And Invalid Role
    - Failure Color Contrast Skipped
    - Failure No Discernible Text And Invalid Role Skipped
    ✓ Failure Color Contrast Disabled Rule
    7) Failure No Discernible Text And Invalid Role Disabled One Rule
    ✓ Failure No Discernible Text And Invalid Role Disabled Rules

5 passing
7 failing
2 pending

1) [chromium] accessibility
     delays
       Short Delay And Fail

       Detected the following accessibility violations!

       1. aria-roles (ARIA roles used must conform to valid values)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/aria-roles?application=axeAPI.

          Check these nodes:

          - html: <button id=\\"hi\\" role=\\"wut-the-wut\\">hello world</button>
            summary: Fix all of the following:
                       Role must be one of the valid ARIA roles: wut-the-wut

2) [chromium] accessibility
     delays
       Medium Delay And Fail

       Detected the following accessibility violations!

       1. aria-roles (ARIA roles used must conform to valid values)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/aria-roles?application=axeAPI.

          Check these nodes:

          - html: <button id=\\"hi\\" role=\\"wut-the-wut\\">hello world</button>
            summary: Fix all of the following:
                       Role must be one of the valid ARIA roles: wut-the-wut

3) [chromium] accessibility
     delays
       Long Delay And Timeout

       TimeoutError: Promise timed out after 2000 milliseconds

4) [chromium] accessibility
     simple
       Failure No Discernible Text

       Detected the following accessibility violations!

       1. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

5) [chromium] accessibility
     simple
       Failure Color Contrast

       Detected the following accessibility violations!

       1. color-contrast (Elements must have sufficient color contrast)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/color-contrast?application=axeAPI.

          Check these nodes:

          - html: <button style=\\"background-color: red; color: hotpink;\\">hello world</button>
            summary: Fix any of the following:
                       Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1

6) [chromium] accessibility
     simple
       Failure No Discernible Text And Invalid Role

       Detected the following accessibility violations!

       1. aria-roles (ARIA roles used must conform to valid values)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/aria-roles?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix all of the following:
                       Role must be one of the valid ARIA roles: wut-the-wut

       2. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

7) [chromium] accessibility
     simple
       Failure No Discernible Text And Invalid Role Disabled One Rule

       Detected the following accessibility violations!

       1. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI.

          Check these nodes:

          - html: <button role=\\"wut-the-wut\\"></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element has no title attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
"
`;

exports[`outputting accessibility violation information for the demo app 2`] = `
"error Command failed with exit code 1.
"
`;

exports[`testing against a storybook server 1`] = `
"1: starting server using command \\"yarn --cwd demo storybook-ci\\"
and when url \\"[ 'http://localhost:6006/iframe.html' ]\\" is responding with HTTP status code 200
running tests using command \\"yarn --cwd demo storybook:axe-no-build:server\\"

$ start-storybook -p 6006 --ci --quiet
webpack built

$ axe-storybook --storybook-address http://localhost:6006 --headless
[chromium] accessibility
  button
    ✓ Button with text (should pass)
    ✓ Button with emoji and label (should pass)
    1) Button with no discernible text (should fail)
    2) Button with insufficient color contrast (should fail)
    - Button with insufficient color contrast but skipped (should pass)
    3) Multiple buttons with insufficient color contrast (should fail)
  input
    ✓ Input with label (should pass)
    4) Input without label (should fail)
    - Input without label but skipped (should pass)
    5) Input without label and invalid role (should fail)
    ✓ Input without label but \\"label\\" rule is disabled (should pass)

4 passing
5 failing
2 pending

1) [chromium] accessibility
     button
       Button with no discernible text (should fail)

       Detected the following accessibility violations!

       1. button-name (Buttons must have discernible text)

          For more info, visit https://dequeuniversity.com/rules/axe/4.1/button-name?application=axeAPI.

          Check these nodes:

          - html: <button style=\\"height: 25px; width: 50px;\\"></button>
            summary: Fix any of the following:
                       Element does not have inner text that is visible to screen readers
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"
                       Element has no title attribute

2) [chromium] accessibility
     button
       Button with insufficient color contrast (should fail)

       Detected the following accessibility violations!

       1. color-contrast (Elements must have sufficient color contrast)

          For more info, visit https://dequeuniversity.com/rules/axe/4.1/color-contrast?application=axeAPI.

          Check these nodes:

          - html: <button style=\\"background-color: red; color: hotpink;\\">Click me!</button>
            summary: Fix any of the following:
                       Element has insufficient color contrast of 1.51 (foreground color: #ff69b4, background color: #ff0000, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1

3) [chromium] accessibility
     button
       Multiple buttons with insufficient color contrast (should fail)

       Detected the following accessibility violations!

       1. color-contrast (Elements must have sufficient color contrast)

          For more info, visit https://dequeuniversity.com/rules/axe/4.1/color-contrast?application=axeAPI.

          Check these nodes:

          - html: <button style=\\"background-color: limegreen; color: hotpink;\\">Click me!</button>
            summary: Fix any of the following:
                       Element has insufficient color contrast of 1.24 (foreground color: #ff69b4, background color: #32cd32, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1

          - html: <button style=\\"background-color: hotpink; color: limegreen;\\">Click me!</button>
            summary: Fix any of the following:
                       Element has insufficient color contrast of 1.24 (foreground color: #32cd32, background color: #ff69b4, font size: 10.0pt (13.3333px), font weight: normal). Expected contrast ratio of 4.5:1

4) [chromium] accessibility
     input
       Input without label (should fail)

       Detected the following accessibility violations!

       1. label (Form elements must have labels)

          For more info, visit https://dequeuniversity.com/rules/axe/4.1/label?application=axeAPI.

          Check these nodes:

          - html: <input>
            summary: Fix any of the following:
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Form element does not have an implicit (wrapped) <label>
                       Form element does not have an explicit <label>
                       Element has no title attribute
                       Element has no placeholder attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

5) [chromium] accessibility
     input
       Input without label and invalid role (should fail)

       Detected the following accessibility violations!

       1. aria-roles (ARIA roles used must conform to valid values)

          For more info, visit https://dequeuniversity.com/rules/axe/4.1/aria-roles?application=axeAPI.

          Check these nodes:

          - html: <input role=\\"wut-the-wut\\">
            summary: Fix all of the following:
                       Role must be one of the valid ARIA roles: wut-the-wut

       2. label (Form elements must have labels)

          For more info, visit https://dequeuniversity.com/rules/axe/4.1/label?application=axeAPI.

          Check these nodes:

          - html: <input role=\\"wut-the-wut\\">
            summary: Fix any of the following:
                       aria-label attribute does not exist or is empty
                       aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
                       Form element does not have an implicit (wrapped) <label>
                       Form element does not have an explicit <label>
                       Element has no title attribute
                       Element has no placeholder attribute
                       Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
"
`;
